[matching-service-adapter] integrate into build